224-hubble-vs/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hubble-gw
  namespace: kube-system
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - hubble.k8s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hubble-vs
  namespace: kube-system
spec:
  hosts:
  - hubble.k8s
  gateways:
  - hubble-gw
  http:
  - route:
    - destination:
        port:
          number: 80 
        host: hubble-ui.kube-system.svc.cluster.local
---
